# message-chat-llm

./: README.md  pyproject.toml
docs/: FAQ.md  INSTALL.md  LAUNCH.md  OLLAMA.md
src/: client.py  config.py  env.py  server.py
